# NMP

./: .gitignore  .gitmodules  Baselines.ipynb  LICENSE  README.md  convert_chorales.ipynb  dataset.py  display_predictions.py  environment.yml  ev_metrics.py  evaluate_model.py  fill_gaps.ipynb  model.py  plotter.py  pyproject.toml  requirements.txt  test_gaps.py  test_generate_auc.ipynb  test_generate_beat_resolution.ipynb  test_generate_error_midi.ipynb  test_generate_piano_roll_samples.ipynb  train.ipynb  train.py  train_ff.py  train_rnn.ipynb  visual_tests.ipynb
logs/: .gitignore
midi_tests/: 1.mid  2-ext.mid  2.mid  64.mid  alb_esp1cut.mid  alb_esp1cut2.mid  anticipo.mid  bach-minuetto1.mid  bach-minuetto2.mid  bach-minuetto3.mid  bach_846cut.mid  bach_846cut2.mid  base_1.mid  base_1b.mid  base_2.mid  base_3.mid  base_4.mid  base_5.mid  base_6.mid  base_7.mid  bis-dot.mid  bis60.mid  bridge.mid  c4.mid  crome10.mid  let-it-be.mid  misto1.mid  organo.mid  organo2.mid  pattern1.mid  pattern1BIS.mid  pattern2.mid  pattern3.mid  pattern4.mid  pattern4bis.mid  proveditest1.mid  proveditest2.mid  proveditest3.mid  proveditest4.mid  punto10.mid  (+8 more)
model/: .gitignore
models/: .gitignore
models/take/: .gitignore
nmp/: dataset.py  ev_metrics.py  model.py  plotter.py
plots/: .gitignore
